--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@sparticuz/chromium": "^126.0.0",
     "@sparticuz/chromium-min": "^126.0.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "puppeteer": "^24.2.0",
     "puppeteer-core": "^22.13.1"
